objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Date_of_First_Connect__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Enter the date of first connect to lead</inlineHelpText>
        <label>Date of First Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Connect__c</fullName>
        <defaultValue>today()+7</defaultValue>
        <label>Date of Second Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Third_Connect__c</fullName>
        <defaultValue>today()+14</defaultValue>
        <label>Date of Third Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FollowUp_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowUp_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Get_Regular_Updates_from_Mirketa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Regular Updates from Mirketa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_address_Web_to_Lead__c</fullName>
        <label>IP address Web to Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Replied_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replied Recieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_id__c</fullName>
        <description>Valid lead sourc id is EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC</description>
        <inlineHelpText>Valid lead sourc id is 
EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC</inlineHelpText>
        <label>Lead Source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pitch_Used__c</fullName>
        <label>Pitch Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Link__c</fullName>
        <inlineHelpText>Enter the linkedin or Salesforce community Profile link.</inlineHelpText>
        <label>Profile Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_Received__c</fullName>
        <label>If Reply Received (Remarks)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_For_NewsLetter__c</fullName>
        <label>Status For NewsLetter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>JIGSAW_KEY</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Round_Robin_Queue_Lead</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Round Robin Distributor</value>
        </filters>
        <label>Round Robin Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Lead_source_id_Check</fullName>
        <active>false</active>
        <errorConditionFormula>Lead_Source_id__c != &apos;EDvF3EF1476518353EFA21B01674436736A2EsFDt2FF1476518352115G476518353239CEchFDp5f1B01674436736F2CC&apos;</errorConditionFormula>
        <errorMessage>Lead Source id is empty,possible spam</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remarks_is_required_if_is_reply_checked</fullName>
        <active>true</active>
        <description>Remarks is required if is reply checked.</description>
        <errorConditionFormula>Is_Replied_Recieved__c == true  &amp;&amp;  ISBLANK( Reply_Received__c )</errorConditionFormula>
        <errorDisplayField>Reply_Received__c</errorDisplayField>
        <errorMessage>Remarks is required if is reply checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spam_leads</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(LastName  , &apos;57f&apos;)  || CONTAINS(LastName  , &apos;58&apos;)</errorConditionFormula>
        <errorMessage>Spam lead</errorMessage>
    </validationRules>
</CustomObject>